--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -186,6 +186,15 @@
   title = "SA.45s Chip-Scale Atomic Clock 098-00055-000 User Guide"
 }
 
+@book{kerrisk2010linux,
+  title={The Linux Programming Interface},
+  author={Kerrisk, M.},
+  isbn={9781593272913},
+  url={https://books.google.no/books?id=Ps2SH727eCIC},
+  year={2010},
+  publisher={No Starch Press}
+}
+
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
 % What is the right way? :/
