Enough for today

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -144,7 +144,7 @@ In the event of spoofing or jamming attack, actions can me made depending on the
 \subsection{Notes}
 It is important to note that this approach doesn't really do anything with the fact that you are being attacked, it simply tries to eliminate the effects of it. In a scenario where you are under attack weeks at a time, you will have to address the fact that you are under attack at some point. It is also important to notes that this countermeasure mostly apply to applications using GPS as a source of time. Having a stable clock during a jamming attack will not help you determine your position once you move (given that you are fully jammed).
 
-\begin{figure}\label{bd}
-  \includegraphics[angle=90, scale=0.5]{master_sketch_arrows.pdf}
+\begin{sidewaysfigure}\label{bd}
+  \includegraphics[scale=0.5]{master_sketch_arrows.pdf}
    \caption[CSAC SMACC Block diagram]{A block diagram of our proposed solution}
-\end{figure}
+\end{sidewaysfigure}
