--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -142,7 +142,6 @@
   url = "https://www.raspberrypi.org/products/raspberry-pi-3-model-b/",
   note = {Accessed: 26-9-2016}
 }
-
 @misc{RASPBIAN,
   author = "Mike Thompson and Peter Green",
   title = "Raspbian",
@@ -156,6 +155,13 @@
   number = "UBX-16000801 - R03",
   note = {Accessed: 2-7-2015}
   }
+
+@manual{UBLOXM8TMANUAL,
+  author = "u-blox",
+  url = "https://www.u-blox.com/sites/default/files/products/documents/u-blox8-M8_ReceiverDescrProtSpec_%28UBX-13003221%29_Public.pdf?utm_source=en/images/downloads/Product_Docs/u-bloxM8_ReceiverDescriptionProtocolSpec_%28UBX-13003221%29_Public.pdf",
+  number = "UBX-13003221 - R11",
+  note = {Accessed: 18-10-2016}
+}
 
 @misc{GCC11,
   author = "Free Software Foundation, Inc",
